[package]
authors = ["Reid Wagner <reid.ab.wagner@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "discorust-led"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"

[dependencies.stm32f4]
version = "0.6.0"
features = ["stm32f429", "rt"]

[dependencies.stm32f4xx-hal]
version = "0.3.0"
features = ["stm32f429"]

# this lets you use `cargo fix`!
[[bin]]
name = "discorust-led"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
